<?xml version="1.0"?>
<package format="3">
  <name>dipgseg</name>
  <version>0.0.0</version>
  <description>The dipgseg package</description>

  <maintainer email="hao.wen@my.cityu.edu.hk">Hao Wen</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>